problems/ingress/social-media-disconnected/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: socialmediaserver
  name: socialmediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socialmediaserver
  template:
    metadata:
      labels:
        app: socialmediaserver
    spec:
      containers:
        - image: fritzduchardt/k8s-showcase-application:latest
          imagePullPolicy: Always
          name: socialmediaserver
          readinessProbe:
            httpGet:
              port: 9090
              path: /health
