problems/ingress/social-media-disconnected/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: socialmediaserver
  name: socialmediaserver
spec:
  ports:
    - port: 8080
      name: application
      protocol: TCP
      targetPort: 8080
    - port: 9090
      name: health
      protocol: TCP
      targetPort: 9090
  selector:
    app: social-media-server
