problems/ingress/social-media-disconnected/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: socialmediaserver
spec:
  rules:
    - http:
        paths:
          - path: /sms
            backend:
              serviceName: socialmediaserver
              servicePort: 8080
